hubleto/main renamed to hubleto/erp

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "description": "Framework for Hubleto.",
     "homepage": "https://www.hubleto.com",
     "support": {
-        "issues": "https://github.com/hubleto/main/issues",
-        "source": "https://github.com/hubleto/main"
+        "issues": "https://github.com/hubleto/framework/issues",
+        "source": "https://github.com/hubleto/framework"
     },
     "keywords": ["hubleto", "crm", "erp", "application", "hub"],
     "require": {
